--- a/SP1Framework/SP1Framework.vcxproj.filters
+++ b/SP1Framework/SP1Framework.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="npc.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="Map.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\console.h">
@@ -73,6 +76,9 @@
     </ClInclude>
     <ClInclude Include="npc.h">
       <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="Map.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
