Added Trap class

--- a/SP1Framework/SP1Framework.vcxproj.filters
+++ b/SP1Framework/SP1Framework.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="npc.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="trap.cpp">
+      <Filter>Source Files\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\console.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
     <ClInclude Include="npc.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="trap.h">
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
