--- a/SP1Framework/SP1Framework.vcxproj.filters
+++ b/SP1Framework/SP1Framework.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="trap.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="Ftrap.cpp">
+      <Filter>Source Files\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework\console.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
     <ClInclude Include="trap.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="Ftrap.h">
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
